# mavlink

./: CMakeLists.txt  aviata_generate.sh
cmake/: mavlink-config.cmake.in
message_definitions/v1.0/: aviata.xml  common.xml
